# sp1-fflonk

./: .gitignore
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: fflonk.rs  fflonk_utils.rs  lib.rs  main.rs  zksync.rs
script/: Cargo.toml
script/src/: main.rs
