[workspace]
[package]
version = "0.1.0"
name = "test-sp1-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
ark-bn254 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
num-bigint = "0.4.4"
tiny-keccak = { version = "2.0", features = ["sha3","keccak"] }